--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.3",
+    "@reduxjs/toolkit": "^1.8.1",
     "react": "17.0.2",
-    "react-native": "0.68.0"
+    "react-native": "0.68.0",
+    "react-redux": "^7.2.8",
+    "reactotron-redux": "^3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -27,6 +30,8 @@
     "react-native-typescript-transformer": "^1.2.13",
     "react-test-renderer": "17.0.2",
     "reactotron-react-native": "^5.0.1",
+    "reactotron-redux-saga": "^4.2.3",
+    "redux-enhancer-react-native-appstate": "^0.3.1",
     "typescript": "^4.6.3"
   },
   "jest": {
