--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "reactotron-react-native": "^5.0.1",
     "reactotron-redux-saga": "^4.2.3",
     "redux-enhancer-react-native-appstate": "^0.3.1",
+    "redux-saga": "^1.1.3",
     "typescript": "^4.6.3"
   },
   "jest": {
