--- a/package.json
+++ b/package.json
@@ -2,6 +2,14 @@
   "name": "pokeApp",
   "version": "0.0.1",
   "private": true,
+  "husky": {
+    "hooks": {
+        "pre-commit": "lint-staged --allow-empty && yarn test:changed",
+        "pre-push": "yarn test",
+        "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+        "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
+    }
+  },
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -25,6 +33,7 @@
     "@types/react-native": "^0.67.3",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
+    "husky": "^7.0.4",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.67.0",
     "react-native-typescript-transformer": "^1.2.13",
