--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "husky": {
     "hooks": {
-        "pre-commit": "lint-staged --allow-empty && yarn test:changed",
-        "pre-push": "yarn test",
-        "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-        "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
+      "commit":"cz",
+      "pre-commit": "lint-staged --allow-empty && yarn test:changed",
+      "pre-push": "yarn test",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
     }
   },
   "scripts": {
@@ -15,7 +16,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "commit": "git-cz"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.3",
@@ -28,10 +30,14 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/react": "^17.0.43",
     "@types/react-native": "^0.67.3",
     "babel-jest": "^26.6.3",
+    "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "3.3.0",
     "eslint": "^7.32.0",
     "husky": "^7.0.4",
     "jest": "^26.6.3",
@@ -46,5 +52,10 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
