--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "husky": {
     "hooks": {
-      "commit":"cz",
+      "commit": "cz",
       "pre-commit": "lint-staged --allow-empty && yarn test:changed",
       "pre-push": "yarn test",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
+      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true",
+      "prepare": "husky install"
     }
   },
   "scripts": {
@@ -22,10 +23,12 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.3",
     "@reduxjs/toolkit": "^1.8.1",
+    "git": "^0.1.5",
     "react": "17.0.2",
     "react-native": "0.68.0",
     "react-redux": "^7.2.8",
-    "reactotron-redux": "^3.1.3"
+    "reactotron-redux": "^3.1.3",
+    "yarn": "^1.22.18"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
