--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "husky": {
     "hooks": {
       "commit": "cz",
-      "pre-commit": "lint-staged --allow-empty && yarn test:changed",
-      "pre-push": "yarn test",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
+      // "pre-commit": "lint-staged --allow-empty && yarn test:changed",
+      "pre-commit": "echo 'eae'",
+
+      // "pre-push": "yarn test",
+      // "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      // "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
     }
   },
   "scripts": {
