--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
       "pre-commit": "lint-staged --allow-empty && yarn test:changed",
       "pre-push": "yarn test",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
+      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true",
     }
   },
   "scripts": {
@@ -42,6 +42,7 @@
     "eslint": "^7.32.0",
     "husky": "^7.0.4",
     "jest": "^26.6.3",
+    "lint-staged": "^12.3.7",
     "metro-react-native-babel-preset": "^0.67.0",
     "react-native-typescript-transformer": "^1.2.13",
     "react-test-renderer": "17.0.2",
