--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "husky": {
     "hooks": {
-      "pre-commit": "echo eae",
+      "pre-commit": "lint-staged --allow-empty",
       "pre-push": "yarn test",
-      "commit-msg":  "echo eae2",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
       "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
     }
   },
@@ -15,15 +15,13 @@
       "eslint --fix --quiet"
     ]
   },
-  "engines": {
-    "node": ">=16.2.0"
-  },
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "tcp": "adb reverse tcp:9090 tcp:9090"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.3",
@@ -49,6 +47,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/react": "^17.0.43",
     "@types/react-native": "^0.67.3",
+    "axios": "^0.26.1",
     "babel-jest": "^26.6.3",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "3.3.0",
@@ -62,6 +61,7 @@
     "reactotron-redux-saga": "^4.2.3",
     "redux-enhancer-react-native-appstate": "^0.3.1",
     "redux-saga": "^1.1.3",
+    "reselect": "^4.1.5",
     "typescript": "^4.6.3"
   },
   "jest": {
