--- a/package.json
+++ b/package.json
@@ -2,14 +2,6 @@
   "name": "pokeApp",
   "version": "0.0.1",
   "private": true,
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged --allow-empty",
-      "pre-push": "yarn test",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
-    }
-  },
   "lint-staged": {
     "*.{ts,tsx}": [
       "eslint --fix --quiet"
@@ -47,6 +39,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/react": "^17.0.43",
     "@types/react-native": "^0.67.3",
+    "@types/styled-components": "^5.1.25",
     "axios": "^0.26.1",
     "babel-jest": "^26.6.3",
     "commitizen": "^4.2.4",
@@ -62,6 +55,7 @@
     "redux-enhancer-react-native-appstate": "^0.3.1",
     "redux-saga": "^1.1.3",
     "reselect": "^4.1.5",
+    "styled-components": "^5.3.5",
     "typescript": "^4.6.3"
   },
   "jest": {
