--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/react": "^17.0.43",
     "@types/react-native": "^0.67.3",
     "@types/styled-components": "^5.1.25",
+    "@types/styled-components-react-native": "^5.1.3",
     "axios": "^0.26.1",
     "babel-jest": "^26.6.3",
     "commitizen": "^4.2.4",
